# ai-group-manager

./: .pdm-python  README.md  pyproject.toml
ai-group-manager/: __init__.py
